--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Exercice 3</title>
 </head>
 <body>
-    TOUT OK !! HEYY
+    Hermann Nguedia, 1971009 - Application Web 2. Présenté à : Mr. Patrick Pierre.
 </body>
 </html>
