--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz 2</title>
+    <title>Formatif 1</title>
 </head>
 <body>
-    Hermann Nguedia, 1971009 - Application Web 2. Présenté à : Mr. Patrick Pierre.
+    <div>Formatif 1</div>
+    <div>
+        <img src="https://imgs.search.brave.com/GyylgLsp7mGMqHtHjpAtC3QWkY8U9Gtz8DBbaPwGNl4/rs:fit:762:220:1/g:ce/aHR0cHM6Ly93d3cu/a2FuYWRha3VsdHVy/bWVya2V6aS5jb20v/d3AtY29udGVudC91/cGxvYWRzLzIwMTgv/MTIvYy1tLWxvZ28u/anBng" 
+        alt="Logo du collège">
+        <h1>Collège Maisonneuve - Hermann</h1>
+    </div>
 </body>
 </html>
